@@ -10,6 +10,8 @@ v1.0.1_02
   - Changed how versions are defined in modules, to handle quirks of
     namespace::autoclean.
 
+  - Changed to use Exporter::Lite.
+
 v1.0.1_01 2014-10-08 00:26 BST
   [Bug Fixes]
   - Fixed argument name for include command.
